# my_package

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
config/: bno055.yaml  ekf.yaml  motor_controller.yaml  nav2.rviz  nav2_params.yaml  rplidar.yaml  slam.yaml
docs/: AUDIT_REPORT.md  ENCODER_ODOMETRY_COMPLETE.md  GUIDE.md  HARDWARE.md  HARDWARE_REQUIREMENTS.md  HOVERBOT_BRINGUP.md  L298N_MOTOR_CONTROL.md  ROBOT_PHYSICAL_CHARACTERISTICS.md  SESSION_HANDOFF.md  SESSION_NOTES.md  SETUP.md  STARTUP_AND_TESTING.md  TODO.md  TROUBLESHOOTING.md  robot_discription.md
docs/hardware/: encoders.md  imu.md  lidar.md  motors.md
launch/: full_bringup.launch.py  launch_sim.launch.py  listener.launch.py  motor_control.launch.py  nav2.launch.py  rplidar.launch.py  rsp.launch.py  service_example.launch.py  slam.launch.py  talker.launch.py  teleop_keyboard.launch.py
maps/: my_map.pgm  my_map.yaml  my_map_slam.data  my_map_slam.pgm  my_map_slam.yaml
my_robot_bringup/: __init__.py  lidar_watchdog.py  motor_controller.py  teleop_keyboard.py
scripts/: calibrate_wheel_base.py  gpio_motor_stop.py  start_session.sh
test/: test_motor_controller.py
urdf/: lidar.xacro  robot.urdf.xacro  robot_core.xacro
worlds/: empty.world  obstacles.world
